# android_core

./: .gitignore  .gitmodules  LICENSE.txt  README.md  build.gradle  buildscript.gradle  gradle.properties  gradlew  myLogs.txt  package.xml  proguard-rules.pro  settings.gradle
AppCamera2/: build.gradle
AppCamera2/src/main/res/layout-land/: fragment_camera2_basic.xml
Application/: AndroidManifest.xml  build.gradle
android_10/: AndroidManifest.xml  build.gradle
android_10/res/layout/: master_chooser.xml
android_10/res/values/: common_strings.xml
android_15/: AndroidManifest.xml  build.gradle
android_acm_serial/: build.gradle
android_benchmarks/: build.gradle
android_tutorial_camera/: build.gradle
android_tutorial_image_transport/: build.gradle
android_tutorial_map_viewer/: build.gradle
android_tutorial_pubsub/: build.gradle
android_tutorial_teleop/: build.gradle
androidvosopencv/: AndroidManifest.xml  CMakeLists.txt  build.gradle
androidvosopencv/res/layout/: activity_main.xml
androidvosopencv/res/values/: strings.xml
androidvosopencv/src/main/cpp/: native-apriltags.cpp  native-lib.cpp
androidvosopencvros/: AndroidManifest.xml  CMakeLists.txt  CMakeLists__txt_bak_2017_04_10  build.gradle  proguard-rules.pro
androidvosopencvros/jni/: application.mk
androidvosopencvros/res/values/: strings.xml
androidvosopencvros/src/main/cpp/: native-apriltags-umich-oneshot.cpp  native-apriltags-umich.cpp  native-apriltags.cpp  native-lib.cpp
androidvosopencvros/src/main/java/org/boofcv/android/misc/: MiscUtil.java
androidvosopencvros/src/main/java/william/chamberlain/androidvosopencvros/: AlgorithmParameters.java  AndroidCameraAdapterForDepricatedApi.java  ApplicationPreferences.java  AprilTagsPosePublisher.java  AssociatePoints.java  CameraIntrinsics.java  CameraResolutionComparator.java  CameraSpecs.java  CameraUtils.java  Constants.java  DataExchange.java  DataOutputPatternTest.java  DataTrack.java  Date.java  DateAndTime.java  DemoVideoDisplayActivity.java  Descriptor.java  DetectedFeature.java  DetectedFeaturesClient.java  DetectedFeaturesHolder.java  DetectedTag.java  DetectorSource.java  DimmableScreen.java  FeatureDataRecorderModeller.java  FiducialBinaryUtils.java  FiducialImageProcessor.java  FileLogger.java  FluidPressurePublisher.java  FocalLengthCalculator.java  Geometry.java  HasCameraIntrinsics.java  IlluminancePublisher.java  ImagePublisher.java  ImuPublisher.java  LandmarkFeatureLoader.java  LocaliseFromAFeatureClient.java  LocaliseFromAFeatureServer.java  LocalisePnP_BoofCV.java  MagneticFieldPublisher.java  MainActivity.java  (+44 more)
androidvosopencvros/src/main/java/william/chamberlain/androidvosopencvros/android_mechanics/: Dialog.java  PermissionsChecker.java
androidvosopencvros/src/main/java/william/chamberlain/androidvosopencvros/device/: DimmableScreen.java  ImuCallback.java  ImuCallbackThread.java  ImuData.java  ImuSensorListener.java  ImuSensorListenerForCallback.java  ImuSensorListenerPublisher.java  ImuThread.java  Quaternion.java  Vector3.java
androidvosopencvros/src/main/java/william/chamberlain/androidvosopencvros/monitoring/: FluidPressurePublisher.java  IlluminancePublisher.java  ImagePublisher.java  ImuMonitoringPublisher.java  ImuPublisher.java  MagneticFieldPublisher.java  NavSatFixPublisher.java  TemperaturePublisher.java  package-info.java
androidvosopencvros/src/main/java/william/chamberlain/androidvosopencvros/resilient/: ResilientNetworkActivity.java
androidvosopencvros/src/main/java/william/chamberlain/androidvosopencvros/ros_types/: RosTypes.java
androidvosopencvros/src/main/java/william/chamberlain/androidvosopencvros/util/: WhereIsAsPubUtil.java
androidvosopencvros/src/main/java/william_chamberlain_examples/localisation/: P3PwithBoofCV.java
androidvosopencvros/src/main/res/layout/: activity_video_activity.xml
androidvosopencvros/src/main/res/values/: strings.xml
androidvosopencvros/src/test/java/william/chamberlain/androidvosopencvros/: DataOutputPatternTest.java  DoATest.java  SmartCameraExtrinsicsCalibratorTest.java
compressed_map_transport/: build.gradle
docs/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary310/: build.gradle
polling_input_stream/: build.gradle
scripts/: export_dev_variables.sh  export_ros_IP_on_laptop.sh  terminal_1_roscore.txt  terminal_2_roscore.txt  terminal_3_roscore.txt
tests/: build.gradle
unit_tests/: build.gradle
vos/: AndroidManifest.xml  build.gradle
vos/src/main/java/: vos_aa1
(+75 files in other folders)
